DeckOfCardsTest
Created a positive and negative test for the RandomIndexNumber and getRandomCard