@@ -14,11 +14,13 @@ class DeckOfCardsTest {
   PlayingCard playingCard;
   final char[] suits = { 'S', 'H', 'D', 'C' };
   List<PlayingCard>cards;
-
+    List<PlayingCard> expected;
   @BeforeEach
   void setUp() {
     cards = new ArrayList<>();
     deck = new DeckOfCards();
+    expected = new ArrayList<>();
+    expected.addAll(deck.getCards());
   }
 
   @Test
@@ -30,7 +32,54 @@ class DeckOfCardsTest {
   @Test
   void addToDeckNegativeTest(){
     assertNotEquals(-1, deck.getCards().size());
-    assertNotEquals(55, deck.getCards().get(0).getSuit());
+    assertNotEquals(55, deck.getCards().getFirst().getSuit());
+  }
+
+  @Test
+  void RandomIndexNumberPositiveTest(){
+    boolean correctIndex = false;
+    int index = deck.randomIndexNumber();
+    if(index <=deck.getCards().size()){
+      correctIndex = true;
+    }
+    assertTrue(correctIndex);
+  }
+
+  @Test
+  void RandomIndexNumberNegativeTest(){
+    boolean wrongIndex = false;
+    int index = deck.randomIndexNumber();
+    if(index < 0 || index >= deck.getCards().size()){
+      wrongIndex = true;
+    }
+    assertFalse(wrongIndex);
+  }
+
+  @Test
+  void getRandomCardPositiveTest() {
+    deck.getRandomCard();
+    assertEquals(expected.size() - 1, deck.getCards().size(), "The deck size should be reduced by one");
+  }
+
+  @Test
+  void GetRandomCardNegativeTest() {
+    PlayingCard randomCard = deck.getRandomCard();
+    assertNotNull(randomCard, "The random card should not be null");
+    assertFalse(deck.getCards().contains(randomCard), "The deck should no longer contain the drawn card");
+  }
+
+  @Test
+  void RemoveCardFromDeckPositiveTest() {
+    int initialSize = deck.getCards().size();
+    deck.removeCardFromDeck(0);
+    assertEquals(initialSize - 1, deck.getCards().size(), "The deck size should be reduced by one");
+  }
+
+  @Test
+  void RemoveCardFromDeckNegativeTest() {
+    int initialSize = deck.getCards().size();
+    deck.removeCardFromDeck(0);
+    assertNotEquals(initialSize, deck.getCards().size(), "The deck size should be reduced by one");
   }
 
 }
